Add data pipeline: ingestion, cleaning, splitting with tests

--- a/configs/data.yaml
+++ b/configs/data.yaml
@@ -25,3 +25,10 @@ cleaning:
   missing_row_threshold: 0.5
   cap_outliers: true
   iqr_multiplier: 1.5
+
+splitting:
+  test_size: 0.15
+  val_size: 0.15
+  random_seed: 42
+  shuffle: true
+  stratify: false
